--- a/2019_cac/2019_cac.Rmd
+++ b/2019_cac/2019_cac.Rmd
@@ -13,7 +13,7 @@ L'apprentissage et la mise au point d'un [analyseur de nutriments](https://githu
 
 La mise au point du seal AA3 a mis en évidence que la précision n'est pas satisfaisante entre 0 et 1 $\mu mol/L$ (concentration retrouvée dans nos mésocomes). L'instrument est actuellement configuré pour être précis entre 0 et 10 $\mu mol/L$ et une mise jour de l'instrument est nécessaire. La microsonde à oxygène n'a également pas apporté les résultats souhaités.
 
-[L'impact de la salinité sur les coraux](https://github.com/EcoNum/coral_salinity002) fut la première expérience d'envergure portée sur les coraux avec une partie des outils en cours de mise au point. Un stress hypersalin (PSU 42) et hyposalin (28) est maintenu durant 7 jours. Le changement de salinité, même sur une courte période, affecte négativement S. hystrix. La couleur, le taux de croissance et le taux de respiration des coraux ont décliné dans chaque condition de stress. Ces résultats semblent indiquer que les zooxanthelles sont directement impactés. Le stress hypersalin a produit des effets plus marqués. Cependant, le taux de croissance est revenu lentement à la normale durant la phase de récupération. Aucune bouture employée n’est morte, ce qui montre une forte résilience de cette espèce.
+[L'impact de la salinité sur les coraux](https://github.com/EcoNum/coral_salinity002) fut la première expérience d'envergure portée sur les coraux avec une partie des outils en cours de mise au point. Un stress hypersalin (42 PSU) et hyposalin (28 PSU) est maintenu durant 7 jours. Le changement de salinité, même sur une courte période, affecte négativement S. hystrix. La couleur, le taux de croissance et le taux de respiration des coraux ont décliné dans chaque condition de stress. Ces résultats semblent indiquer que les zooxanthelles sont directement impactés. Le stress hypersalin a produit des effets plus marqués. Cependant, le taux de croissance est revenu lentement à la normale durant la phase de récupération. Aucune bouture employée n’est morte, ce qui montre une forte résilience de cette espèce.
 
 Afin de vérifier cette hypothèse, une seconde expérience sur l'impact de la salinité va débuter avec un intérêt marqué sur les zooxanthelles. Le nombre de boutures étudiées va être augmenté. Un prélèvement va être réalisé sur les boutures afin de quantifier les zooxanthelles avant le stress salin, à la fin de la période de stress et après une phase de récupération. Les zooxanthelles vont être extrait pour être dénombré avec une cellule de comptage sous microscope. La fluorescence va également être monitorée avec l'Imaging PAM. 
 
