correction de l'orthographe

--- a/2019_cac/2019_cac.Rmd
+++ b/2019_cac/2019_cac.Rmd
@@ -7,17 +7,17 @@ output: pdf_document
 
 # Compte rendu 
 
-L'étude des réponses écophysiologiques des coraux à des stress par des méthodes non destructives et en mésocosmes (limite du nombre d'individus), requiert l'utilisation de techniques et d'outils particuliers. 
+L'étude des réponses écophysiologiques des coraux à des stress par des méthodes non destructives et en mésocosmes (limite du nombre d'individus) requiert l'utilisation de techniques et d'outils particuliers. 
 
-L'apprentissage et la mise au point d'un [analyseur de nutriments](https://github.com/EcoNum/protocol_seal_aa3) (Seal AA3, dosage des composés azotés et phosphorés), d'une [microsonde à oxygène](https://github.com/EcoNum/oxygen_microsensors) (Pyrosciences Sensor, mesure locale de l'oxygène), de chambres respiromètriques (mesure globale de l'oxygène), d'un [fluoromètre](https://github.com/EcoNum/pam_fluorometry) (Imaging-Pam, quantification de la fluorescence émise par la chlorophylle), et enfin du [suivi de la croissance via le poids immergé](https://github.com/EcoNum/coral_growth001) sont les premiers outils et techniques que j'ai utilisé.
+L'apprentissage et la mise au point d'un [analyseur de nutriments](https://github.com/EcoNum/protocol_seal_aa3) (Seal AA3, dosage des composés azotés et phosphorés), d'une [microsonde à oxygène](https://github.com/EcoNum/oxygen_microsensors) (Pyrosciences Sensor, mesure locale de l'oxygène), de chambres respiromètriques (mesure globale de l'oxygène), d'un [fluoromètre](https://github.com/EcoNum/pam_fluorometry) (Imaging-Pam, quantification de la fluorescence émise par la chlorophylle), et enfin du [suivi de la croissance via le poids immergé](https://github.com/EcoNum/coral_growth001) sont les premiers outils et techniques que j'ai utilisés.
 
-La mise au point du seal AA3 a mis en évidence que la précision n'est pas satisfaisante entre 0 et 1 $\mu mol/L$ (concentration retrouvée dans nos mésocomes). L'instrument est actuellement configuré pour être précis entre 0 et 10 $\mu mol/L$ et une mise jour de l'instrument est nécessaire. La microsonde à oxygène n'a également pas apporté les résultats souhaités.
+La mise au point du seal AA3 a mis en évidence que la précision n'est pas satisfaisante entre 0 et 1 $\mu mol/L$ (concentration retrouvée dans nos mésocomes). L'instrument est actuellement configuré pour être précis entre 0 et 10 $\mu mol/L$ et une mise jour de l'instrument est nécessaire. La microsonde à oxygène n'a également pas apporté les résultats souhaités. 
 
-[L'impact de la salinité sur les coraux](https://github.com/EcoNum/coral_salinity002) fut la première expérience d'envergure portée sur les coraux avec une partie des outils en cours de mise au point. Un stress hypersalin (42 PSU) et hyposalin (28 PSU) est maintenu durant 7 jours. Le changement de salinité, même sur une courte période, affecte négativement S. hystrix. La couleur, le taux de croissance et le taux de respiration des coraux ont décliné dans chaque condition de stress. Ces résultats semblent indiquer que les zooxanthelles sont directement impactés. Le stress hypersalin a produit des effets plus marqués. Cependant, le taux de croissance est revenu lentement à la normale durant la phase de récupération. Aucune bouture employée n’est morte, ce qui montre une forte résilience de cette espèce.
+[L'impact de la salinité sur les coraux](https://github.com/EcoNum/coral_salinity002) fut la première expérience d'envergure portée sur les coraux avec une partie des outils en cours de mise au point. Un stress hypersalin (42 PSU) et hyposalin (28 PSU) est maintenu durant 7 jours. Le changement de salinité, même sur une courte période, affecte négativement *S. hystrix*. La couleur, le taux de croissance et le taux de respiration des coraux ont décliné dans chaque condition de stress. Ces résultats semblent indiquer que les zooxanthelles sont directement impactés. Le stress hypersalin a produit des effets plus marqués. Cependant, le taux de croissance est revenu lentement à la normale durant la phase de récupération. Aucune bouture employée n’est morte, ce qui montre une forte résilience de cette espèce.
 
-Afin de vérifier cette hypothèse, une seconde expérience sur l'impact de la salinité va débuter avec un intérêt marqué sur les zooxanthelles. Le nombre de boutures étudiées va être augmenté. Un prélèvement va être réalisé sur les boutures afin de quantifier les zooxanthelles avant le stress salin, à la fin de la période de stress et après une phase de récupération. Les zooxanthelles vont être extrait pour être dénombré avec une cellule de comptage sous microscope. La fluorescence va également être monitorée avec l'Imaging PAM. 
+Afin de vérifier cette hypothèse, une seconde expérience sur l'impact de la salinité va débuter avec un intérêt marqué sur les zooxanthelles. Le nombre de boutures étudiées va être augmenté. Un prélèvement va être réalisé sur les boutures afin de quantifier les zooxanthelles avant le stress salin, à la fin de la période de stress et après une phase de récupération. Les zooxanthelles vont être extraites pour être dénombrées avec une cellule de comptage sous microscope. La fluorescence va également être monitorée avec l'Imaging PAM. 
 
-De manière transversale, ces recherches se veulent reproductibles et en accord avec l'Open Science. L'ensemble des notebbok, des rapports, des données sont diffusés en libre accès via une [organisation sur Github](https://github.com/EcoNum) (<https://github.com/EcoNum>). J'ai du apprendre ces notions pour ma recherche et pour l'enseignement des nouveaux cours de Sciences de données biologiques (remplacent des cours de Biostatistique).
+De manière transversale, ces recherches se veulent reproductibles et en accord avec l'Open Science. L'ensemble des notebooks, des rapports, des données est diffusé en libre accès via une [organisation sur Github](https://github.com/EcoNum) (<https://github.com/EcoNum>). Ces notions ont été acquises dans le cadre de ma recherche et de l'enseignement des nouveaux cours de Sciences de données biologiques (remplaçant les cours de Biostatistique).
 
 # Liste des activités 
 
