--- a/2019_cac/2019_cac.Rmd
+++ b/2019_cac/2019_cac.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Rapport pour le comité d'accompagnement (cac)"
+title: "Rapport pour le comité d'accompagnement, seconde année de thèse"
 author: "Guyliann Engels"
 date: "`r format(Sys.Date(), '%d-%m-%Y')`"
 output: pdf_document
@@ -7,60 +7,79 @@ output: pdf_document
 
 # Avancement de la recherche
 
-L'étude des réponses écophysiologiques des coraux à des stress par des méthodes non destructives et en mésocosmes (limite du nombre d'individus) requiert l'utilisation de techniques et d'outils particuliers. 
+## Titre provisoire de la thèse: Adaptations écophysiologiques du scléractiniaire hermatypique _Seriatopora hystrix_ aux changements du milieu (nutriments N et P et stress salin).
 
-L'apprentissage et la mise au point d'un [analyseur de nutriments](https://github.com/EcoNum/protocol_seal_aa3) (Seal AA3, dosage des composés azotés et phosphorés), d'une [microsonde à oxygène](https://github.com/EcoNum/oxygen_microsensors) (Pyrosciences Sensor, mesure locale de l'oxygène), de chambres respiromètriques (mesure globale de l'oxygène), d'un [fluoromètre](https://github.com/EcoNum/pam_fluorometry) (Imaging-Pam, quantification de la fluorescence émise par la chlorophylle), et enfin du [suivi de la croissance via le poids immergé](https://github.com/EcoNum/coral_growth001) sont les premiers outils et techniques que j'ai utilisés.
+Les scléractiniaires hermatypiques bénéficient de symbioses multiples, dont la principale avec les _Symbiodinium_, qui lui permettent d'exploiter au mieux les ressources limitées d'un milieu oligothrophe, dont N et P. Cet holobionte corallien, s'il est performant dans ces conditions, se montre également très sensible aux changements du milieu. Parmi les différents stress que subissent les coraux tropicaux, les stress salins sont de plus en plus fréquents et se superposent à d'autres menaces. La salinité peut baisser, suite au passage d'un tempête tropicale, mais elle peut aussi augmenter autour des usines de désalinisation pour la production d'eau douce qui se développent notamment en Mer Rouge. Les _Symbiodinium_ semblent être les symbiontes les plus affectés par ces variations de salinité au sein de l'holobionte corallien.
 
-La mise au point du seal AA3 a mis en évidence que la précision n'est pas satisfaisante entre 0 et 1 $\mu mol/L$ (concentration retrouvée dans nos mésocomes). L'instrument est actuellement configuré pour être précis entre 0 et 10 $\mu mol/L$ et une mise jour de l'instrument est nécessaire. La microsonde à oxygène n'a également pas apporté les résultats souhaités. 
+L'objectif de ce travail est de décrire, qauntifier et interpréter l'effet de variation non léthales de salinité, de courte durées (moins d'une semaine), ou sur plus long terme (quelques mois) sur le fonctionnement de l'holobionte coralien sur base du modèle _Seriatopora hystrix_. Parmi les effets étudiés, tels la variation de croissance et la formation du squelette, nous porterons une attention particulière à la photosynthèse des _Symbiodinium_ et aux bilans N et P, avant, pendant et après le stress. L'étude se fait en mésocsomes artificiels.
 
-[L'impact de la salinité sur les coraux](https://github.com/EcoNum/coral_salinity002) fut la première expérience d'envergure portée sur les coraux avec une partie des outils en cours de mise au point. Un stress hypersalin (42 PSU) et hyposalin (28 PSU) est maintenu durant 7 jours. Le changement de salinité, même sur une courte période, affecte négativement *S. hystrix*. La couleur, le taux de croissance et le taux de respiration des coraux ont décliné dans chaque condition de stress. Ces résultats semblent indiquer que les zooxanthelles sont directement impactés. Le stress hypersalin a produit des effets plus marqués. Cependant, le taux de croissance est revenu lentement à la normale durant la phase de récupération. Aucune bouture employée n’est morte, ce qui montre une forte résilience de cette espèce.
 
-Afin de vérifier cette hypothèse, une seconde expérience sur l'impact de la salinité va débuter avec un intérêt marqué sur les zooxanthelles. Le nombre de boutures étudiées va être augmenté. Un prélèvement va être réalisé sur les boutures afin de quantifier les zooxanthelles avant le stress salin, à la fin de la période de stress et après une phase de récupération. Les zooxanthelles vont être extraites pour être dénombrées avec une cellule de comptage sous microscope. La fluorescence va également être monitorée avec l'Imaging PAM. 
+### Chapitre 1: bilan des flux d'azote et de phosphore au niveau de l'holobionte corallien
+
+Les flux d'azote et de phosphore inorganiques, et l'effet de leurs variations dans l'eau, ont déjà fait l'objet de nombreuses études. Cependant, les flux **totaux**, considérant l'azote et le phospohe inorganique **et organique** sont moins étudiés. Nous disposition d'un Seal AA3 équipé pour le dosage de NH3/NH4+, NO3-, NO2-, PO4---, Nt et Pt, avec un disposition de digestion et minéralisation de la matière organique en ligne pour ces deux derniers paramètres. Le suivi et l'établissement des bilans se fera, en conditions non stressantes, après mise au point des protocoles de dosage.
+
+**Avancement:** Cette année, nous avons effectué la mise au point de l'[analyseur de nutriments](https://github.com/EcoNum/protocol_seal_aa3) (Seal AA3, dosage des composés azotés et phosphorés). La précision de l'appareil n'est pas satisfaisante entre 0 et 1 $\mu mol/L$ pour NH3 et PO4--- (concentration retrouvée dans nos mésocomes). L'instrument est actuellement configuré pour être utilisé dans une gamme entre 0 et 10 $\mu mol/L$, ce qui apparait adéquat pour Nt et Pt. Une mise jour de l'instrument est prévue prochainement (cellule de chemin optique de 5cm au lieu des cellules de 1cm actuelles) pour les chimies qui nécessitent une meilleure précision. De nouveaux tests seront réalisés ensuite. Les mesures de bilans Nt/Pt sur _S. hystrix_ sont prévu pour l'année prochaine. 
+
+
+### Chapitre 2: effets globaux d'un stress salin modéré de courte durée sur l'holobionte corallien
+
+Après un suivi de trois series de ... boutures de _S. hystrix_ en mésocosme pendant ... jours, un stress salin de sept jours a été appliqué, tant en hypersalin (S = 42 PSU) qu'en hyposalin (S = 28 PSU) sur un lot à chaque fois, un lot témoin restant à salinité de référence (S = 35 PSU). La variation et le retour à la normale se sont fait sur une durée de ... h. La récupération des boutures a ensuite été suivie pendant ... jours.
+
+Les variables mesurées sont ..., ..., ...
+
+Durant cette expérience, aucune bouture n'est morte, mais une diminution significative de la croissance, de la respiration (?? aller voir laquelle dans le mémoire de Nadège, je sais plus), et la photosynthèse on très nettement diminué. [citer des chiffres ou montrer un graphique ou deux]. La coloration des boutures a pâli aussi. Cette première expérience a confirmé le caractère non léthal du stress et aussi que ce sont les zooxanthelles qui sont le plus affectées. Les boutures ont retrouvé des conditions normales après ... jours.
+
+Le stress hypersalin a produit des effets plus marqués que le stress hyposalin, démontrant ainsi le danger important de l'établissement d'usines de désalinisation à proximité de récifs coralliens tropicaux.
+
+**Avancement:** Cette première expérience fera l'objet d'un publication. Elle doit être suivie d'une seconde expérience sur plus long-terme (chapitre III). Nous avons particulièrement soigné le suivi de croissance des boutures en mésocosmes  [suivi de la croissance via le poids immergé](https://github.com/EcoNum/coral_growth001), et des outils logiciels ont été mis au point pour faciliter le suivant d'un grand nombre de boutures de manière efficace. Cela sera utile pour toute la suite de la partie expérimentale de ce travail.
+
+
+### Chapitre 3: effet d'un stress salin de plusieurs mois sur l'holobionte corallien
+
+Etant donné que ce sont manifestement les zooxanthelles qui sont le plus affectées, une étude plus poussée de la photosynthèse est prévue. Pour se faire, lors de cette seconde expérience, nous étudierons le fonctionnement du photosystème II en particulier à l'aide de fluorimétrie PAM (Waltz min-PAM I), ainsi que d'un Waltz imaging PAM qui pourra montrer une éventuelle hétérogéité spatiale à la surface de la bouture au niveau de l'activité photosynthétique des zooxanthelles. Le protocole expérimental sera le même, mais avec 2 à 3 fois plus de boutures (en fonction des disponibilités).
+
+Toujours afin d'étudier la photosynthèse, et notamment pour pouvoir quantifier la photosynthèse brute, nous souhaitons pouvoir utiliser la méthode de shift lumière-obscurité à l'aide d'une [microoptode à oxygène ultra-rapide PyroScience](https://github.com/EcoNum/oxygen_microsensors). Malheureusement, pour l'instant, les essais n'ont pas donnés de résultats utilisables.
+
+**Avancement:** Nous voulons essayer un autre protocole avec la microoptode oxygène avant de commencer l'expérience. Si nous n'arrivons pas à mesurer la photosynthèse brute de manière suffisamment précise, nous lancerons l'expérience sans cette mesure dans deux ans.
+
+
+### Chapitre 4: effet d'un stress salin sur les bilans Nt et Pt chez l'holobionte corallien
+
+Ce chapitre visera à approfondir la compréhension des mécanismes qui se déroulent au sein de l'holobionte corallien durant le stress salin, et après, pendant la période de récupération. Nous profiterons du bilan Nt/Pt du chapitre 1 et son protocole de mesure et le combinerons avec une expérience de stress salin ciblée, en fonction des résultats obtenus dans le chapitre 3.
+
+**Avancement:** Ce travail est prévu en quatrième année de thèse.
+
+A noter que la thèse est prévue de s'étaller sur 6 ans (assistant) et que ce bilan est rélisé après 1 an et demi.
 
 De manière transversale, ces recherches se veulent reproductibles et en accord avec l'Open Science. L'ensemble des notebooks, des rapports, des données est diffusé en libre accès via une [organisation sur Github](https://github.com/EcoNum) (<https://github.com/EcoNum>). Ces notions ont été acquises dans le cadre de ma recherche et de l'enseignement des nouveaux cours de Sciences de données biologiques (remplaçant les cours de Biostatistique).
 
-# Liste des activités 
+
+# Publications et communications scientifiques
 
 ## Publications 
 
-### Présentation
+Une publication est en préparation concernant le chapitre 2.
+
+
+## Présentation
 
 - Grosjean Philippe, Engels Guyliann, "Est-il possible d’améliorer encore la courbe d’apprentissage de R au delà de tidyverse? Les packages flow et chart." in "Septièmes rencontres R" , Rennes, France (2018)
 
-- Richir Jonathan, Abadie Arnaud, Borges Alberto, Champenois Willy, Santos Rui, Silva Joa, Walz Steffen, Lejeune Pierre, Engels Guyliann, Gobert Sylvie, "Etude de la photosynthèse de Posidonia oceanica par fluorimétrie modulée" in "Workshop STARECAPMED" , Calvi, France (2018)
+- Richir Jonathan, Abadie Arnaud, Borges Alberto, Champenois Willy, Santos Rui, Silva Joa, Walz Steffen, Lejeune Pierre, Engels Guyliann, Gobert Sylvie, "Etude de la photosynthèse de _Posidonia oceanica_ par fluorimétrie modulée" in "Workshop STARECAPMED" , Calvi, France (2018)
 
-### Poster
+## Poster
 
-- Engels Guyliann, Georges Nadège, Conotte Raphaël, Batigny Antoine, Grosjean Philippe, "Réponses écophysiologiques de Seriatopora hystrix (Dana, 1846) lors de stress hypo- et hypersalin" in "Mardi des Chercheurs" , Mons, Belgique (2019)
+- Engels Guyliann, Georges Nadège, Conotte Raphaël, Batigny Antoine, Grosjean Philippe, "Réponses écophysiologiques de _Seriatopora hystrix_ (Dana, 1846) lors de stress hypo- et hypersalin" in "Mardi des Chercheurs" , Mons, Belgique (2019)
 2018
 
-- Engels Guyliann, Georges Nadège, Conotte Raphaël, Batigny Antoine, Grosjean Philippe, "Ecophysiological responses of Seriatopora hystrix (Dana, 1846) to short-term hypo- and hypersaline stress" in "The 25th Benelux congress of Zoology, “Zoology in the Anthropocene”" , Anvers, Belgique (2018)
+- Engels Guyliann, Georges Nadège, Conotte Raphaël, Batigny Antoine, Grosjean Philippe, "Ecophysiological responses of _Seriatopora hystrix_ (Dana, 1846) to short-term hypo- and hypersaline stress" in "The 25th Benelux congress of Zoology, “Zoology in the Anthropocene”" , Anvers, Belgique (2018)
 
 - Engels Guyliann, Grosjean Philippe, "Introduction de nouveaux outils (learn, GitHub Classroom,...) dans les cours de Science des données en biologie" in "Septièmes rencontres R" , Rennes, France (2018)
 2017
 
 
-## Liste des activités supplémentaires.
+## Activités supplémentaires valorisables pour la formation doctorale
 
-- Formation pédagogique du Corps Scientifique oganisée par le Service d'Appui Pédagogique de l'Université de Mons.
+- C.I.B.I.M. (présence) [préciser date] Présence à le conférence annuelle du Centre Interuniversitaire de Biologie Marine à Louvain La Neuve 2017.
 
-Formation obligatoire pour tous les assistants de l'Université de MONS. Cette formation n'est cependant pas créditée et s'est déroulée durant l'année académique 2017-2018. 
-
-- C.I.B.I.M. (présence)
-
-Présence à le conférence annuelle du Centre Interuniversitaire de Biologie Marine à Louvain La Neuve 2017.
-
-- Formation sur le deep learning 
-
-Formation d'1/2 journée sur le deep learning durant la septièmes rencontres R (Rennes, France)
-
-# Activités à valoriser pour la formation doctorale
-
-- 1 journée : Conférence du **CIBIM**
-- 3 journées : Conférences **Septièmes rencontres R**
-    + Présentation d'un poster 
-    + Formation sur le deep learning (1/2 journée)
-- 1 journée : Conférence **The 25th Benelux congress of Zoology**
-    + Présentation d'un poster
-- 1 journée : Conférence **Mardi des Chercheurs**
-    + Présentation d'un poster
+- Formation sur le deep learning. Formation d'1/2 journée sur le deep learning durant la septièmes rencontres R (Rennes, France) [préciser date]
