modification du chapitre 2

--- a/2019_cac/2019_cac.Rmd
+++ b/2019_cac/2019_cac.Rmd
@@ -9,34 +9,36 @@ output: pdf_document
 
 ## Titre provisoire de la thèse: Adaptations écophysiologiques du scléractiniaire hermatypique _Seriatopora hystrix_ aux changements du milieu (nutriments N et P et stress salin).
 
-Les scléractiniaires hermatypiques bénéficient de symbioses multiples, dont la principale avec les _Symbiodinium_, qui lui permettent d'exploiter au mieux les ressources limitées d'un milieu oligothrophe, dont N et P. Cet holobionte corallien, s'il est performant dans ces conditions, se montre également très sensible aux changements du milieu. Parmi les différents stress que subissent les coraux tropicaux, les stress salins sont de plus en plus fréquents et se superposent à d'autres menaces. La salinité peut baisser, suite au passage d'un tempête tropicale, mais elle peut aussi augmenter autour des usines de désalinisation pour la production d'eau douce qui se développent notamment en Mer Rouge. Les _Symbiodinium_ semblent être les symbiontes les plus affectés par ces variations de salinité au sein de l'holobionte corallien.
+Les scléractiniaires hermatypiques bénéficient de symbioses multiples, dont la principale avec les _Symbiodinium_, qui lui permettent d'exploiter au mieux les ressources limitées d'un milieu oligothrophe, dont N et P. Cet holobionte corallien, s'il est performant dans ces conditions, se montre également très sensible aux changements du milieu. Parmi les différents stress que subissent les coraux tropicaux, les stress salins sont de plus en plus fréquents et se superposent à d'autres menaces. La salinité peut baisser, suite au passage d'un tempête tropicale, mais elle peut aussi augmenter autour des usines de désalinisation pour la production d'eau douce qui se développent notamment en Mer Rouge. Les _Symbiodinium_ semblent être les symbiotes les plus affectés par ces variations de salinité au sein de l'holobionte corallien.
 
-L'objectif de ce travail est de décrire, qauntifier et interpréter l'effet de variation non léthales de salinité, de courte durées (moins d'une semaine), ou sur plus long terme (quelques mois) sur le fonctionnement de l'holobionte coralien sur base du modèle _Seriatopora hystrix_. Parmi les effets étudiés, tels la variation de croissance et la formation du squelette, nous porterons une attention particulière à la photosynthèse des _Symbiodinium_ et aux bilans N et P, avant, pendant et après le stress. L'étude se fait en mésocsomes artificiels.
+L'objectif de ce travail est de décrire, quantifier et interpréter l'effet de variation non létales de salinité, de courte durées (moins d'une semaine), ou sur plus long terme (quelques mois) sur le fonctionnement de l'holobionte corallien sur base du modèle _Seriatopora hystrix_. Parmi les effets étudiés, tels la variation de croissance et la formation du squelette, nous porterons une attention particulière à la photosynthèse des _Symbiodinium_ et aux bilans N et P, avant, pendant et après le stress. L'étude se fait en mésocosmes artificiels.
 
 
 ### Chapitre 1: bilan des flux d'azote et de phosphore au niveau de l'holobionte corallien
 
-Les flux d'azote et de phosphore inorganiques, et l'effet de leurs variations dans l'eau, ont déjà fait l'objet de nombreuses études. Cependant, les flux **totaux**, considérant l'azote et le phospohe inorganique **et organique** sont moins étudiés. Nous disposition d'un Seal AA3 équipé pour le dosage de NH3/NH4+, NO3-, NO2-, PO4---, Nt et Pt, avec un disposition de digestion et minéralisation de la matière organique en ligne pour ces deux derniers paramètres. Le suivi et l'établissement des bilans se fera, en conditions non stressantes, après mise au point des protocoles de dosage.
+Les flux d'azote et de phosphore inorganiques, et l'effet de leurs variations dans l'eau, ont déjà fait l'objet de nombreuses études. Cependant, les flux **totaux**, considérant l'azote et le phosphore inorganique **et organique** sont moins étudiés. Nous disposons d'un Seal AA3 équipé pour le dosage de NH3/NH4+, NO3-, NO2-, PO4---, Nt et Pt, avec un disposif de digestion et de minéralisation de la matière organique en ligne pour ces deux derniers paramètres. Le suivi et l'établissement des bilans se fera, en conditions non stressantes, après mise au point des protocoles de dosage.
 
-**Avancement:** Cette année, nous avons effectué la mise au point de l'[analyseur de nutriments](https://github.com/EcoNum/protocol_seal_aa3) (Seal AA3, dosage des composés azotés et phosphorés). La précision de l'appareil n'est pas satisfaisante entre 0 et 1 $\mu mol/L$ pour NH3 et PO4--- (concentration retrouvée dans nos mésocomes). L'instrument est actuellement configuré pour être utilisé dans une gamme entre 0 et 10 $\mu mol/L$, ce qui apparait adéquat pour Nt et Pt. Une mise jour de l'instrument est prévue prochainement (cellule de chemin optique de 5cm au lieu des cellules de 1cm actuelles) pour les chimies qui nécessitent une meilleure précision. De nouveaux tests seront réalisés ensuite. Les mesures de bilans Nt/Pt sur _S. hystrix_ sont prévu pour l'année prochaine. 
+**Avancement:** Cette année, nous avons effectué la mise au point de l'[analyseur de nutriments](https://github.com/EcoNum/protocol_seal_aa3) (Seal AA3, dosage des composés azotés et phosphorés). La précision de l'appareil n'est pas satisfaisante entre 0 et 1 $\mu mol/L$ pour NH3 et PO4--- (concentration retrouvée dans nos mésocosmes). L'instrument est actuellement configuré pour être utilisé dans une gamme entre 0 et 10 $\mu mol/L$, ce qui apparaît adéquat pour Nt et Pt. Une mise jour de l'instrument est prévue prochainement (cellule de chemin optique de 5cm au lieu des cellules de 1cm actuelles) pour les chimies qui nécessitent une meilleure précision. De nouveaux tests seront réalisés ensuite. Les mesures de bilans Nt/Pt sur _S. hystrix_ sont prévu pour l'année prochaine. 
 
 
 ### Chapitre 2: effets globaux d'un stress salin modéré de courte durée sur l'holobionte corallien
 
-Après un suivi de trois series de ... boutures de _S. hystrix_ en mésocosme pendant ... jours, un stress salin de sept jours a été appliqué, tant en hypersalin (S = 42 PSU) qu'en hyposalin (S = 28 PSU) sur un lot à chaque fois, un lot témoin restant à salinité de référence (S = 35 PSU). La variation et le retour à la normale se sont fait sur une durée de ... h. La récupération des boutures a ensuite été suivie pendant ... jours.
+Après un suivi de 16 boutures de _S. hystrix_ en mésocosme pendant 30 jours, un stress salin de 6 jours a été appliqué, tant en hypersalin (S = 42 PSU, n = 6) qu'en hyposalin (S = 28 PSU, n = 6) sur un lot à chaque fois, un lot témoin restant à salinité de référence (S = 35 PSU, n = 4). La variation et le retour à la normale se sont fait sur une durée de 6 h. La récupération des boutures a ensuite été suivie pendant 28 jours.
 
-Les variables mesurées sont ..., ..., ...
+Les variables mesurées sont le poids squelettique (via le poids immergé), les teneurs en composés azotés et phosphorés, l'alcalinité, la coloration des boutures et divers paramètres physico-chimiques (température, salinité, pH).
 
-Durant cette expérience, aucune bouture n'est morte, mais une diminution significative de la croissance, de la respiration (?? aller voir laquelle dans le mémoire de Nadège, je sais plus), et la photosynthèse on très nettement diminué. [citer des chiffres ou montrer un graphique ou deux]. La coloration des boutures a pâli aussi. Cette première expérience a confirmé le caractère non léthal du stress et aussi que ce sont les zooxanthelles qui sont le plus affectées. Les boutures ont retrouvé des conditions normales après ... jours.
+Durant cette expérience, aucune bouture n'est morte, mais une diminution significative de la croissance (\autoref{growth_plot}), de la respiration, et la photosynthèse ont très nettement diminué. Le taux de respiration n'est pas significativement différent de nuit dans les trois conditions par contre de jour une diminution de moitié est observé aussi bien dans la condition hyposaline que hypersaline par rapport au contrôle. La coloration des boutures a pâli aussi. Cette première expérience a confirmé le caractère non létal du stress et aussi que ce sont les zooxanthelles qui sont le plus affectées. Les boutures ont retrouvé des conditions normales à la fin de la phase de récupération.
+
+![Taux de croissance [%/j] au cours du temps [j] avec trois conditions : contrôle (n=4), hypersaline (n=6) et hyposaline (n=6). De plus, trois phases sont mis en avant : avant le stress (Av. stress), stress et récupération. \label{growth_plot}](figure/plot1_red.png){width="65%"}
 
 Le stress hypersalin a produit des effets plus marqués que le stress hyposalin, démontrant ainsi le danger important de l'établissement d'usines de désalinisation à proximité de récifs coralliens tropicaux.
 
-**Avancement:** Cette première expérience fera l'objet d'un publication. Elle doit être suivie d'une seconde expérience sur plus long-terme (chapitre III). Nous avons particulièrement soigné le suivi de croissance des boutures en mésocosmes  [suivi de la croissance via le poids immergé](https://github.com/EcoNum/coral_growth001), et des outils logiciels ont été mis au point pour faciliter le suivant d'un grand nombre de boutures de manière efficace. Cela sera utile pour toute la suite de la partie expérimentale de ce travail.
+**Avancement:** Cette première expérience fera l'objet d'une publication. Elle doit être suivie d'une seconde expérience sur plus long-terme (chapitre III). Nous avons particulièrement soigné le suivi de croissance des boutures en mésocosmes  [suivi de la croissance via le poids immergé](https://github.com/EcoNum/coral_growth001), et des outils logiciels ont été mis au point pour faciliter le suivant d'un grand nombre de boutures de manière efficace. Cela sera utile pour toute la suite de la partie expérimentale de ce travail.
 
 
 ### Chapitre 3: effet d'un stress salin de plusieurs mois sur l'holobionte corallien
 
-Etant donné que ce sont manifestement les zooxanthelles qui sont le plus affectées, une étude plus poussée de la photosynthèse est prévue. Pour se faire, lors de cette seconde expérience, nous étudierons le fonctionnement du photosystème II en particulier à l'aide de fluorimétrie PAM (Waltz min-PAM I), ainsi que d'un Waltz imaging PAM qui pourra montrer une éventuelle hétérogéité spatiale à la surface de la bouture au niveau de l'activité photosynthétique des zooxanthelles. Le protocole expérimental sera le même, mais avec 2 à 3 fois plus de boutures (en fonction des disponibilités).
+Etant donné que ce sont manifestement les zooxanthelles qui sont les plus affectées, une étude plus poussée de la photosynthèse est prévue. Pour se faire, lors de cette seconde expérience, nous étudierons le fonctionnement du photosystème II en particulier à l'aide de fluorimétrie PAM (Waltz min-PAM I), ainsi que d'un Waltz imaging PAM qui pourra montrer une éventuelle hétérogénéité spatiale à la surface de la bouture au niveau de l'activité photosynthétique des zooxanthelles. Le protocole expérimental sera le même, mais avec 2 à 3 fois plus de boutures (en fonction des disponibilités).
 
 Toujours afin d'étudier la photosynthèse, et notamment pour pouvoir quantifier la photosynthèse brute, nous souhaitons pouvoir utiliser la méthode de shift lumière-obscurité à l'aide d'une [microoptode à oxygène ultra-rapide PyroScience](https://github.com/EcoNum/oxygen_microsensors). Malheureusement, pour l'instant, les essais n'ont pas donnés de résultats utilisables.
 
@@ -49,7 +51,7 @@ Ce chapitre visera à approfondir la compréhension des mécanismes qui se déro
 
 **Avancement:** Ce travail est prévu en quatrième année de thèse.
 
-A noter que la thèse est prévue de s'étaller sur 6 ans (assistant) et que ce bilan est rélisé après 1 an et demi.
+A noter que la thèse est prévue de s’étaler sur 6 ans (assistant) et que ce bilan est réalisé après 1 an et demi.
 
 De manière transversale, ces recherches se veulent reproductibles et en accord avec l'Open Science. L'ensemble des notebooks, des rapports, des données est diffusé en libre accès via une [organisation sur Github](https://github.com/EcoNum) (<https://github.com/EcoNum>). Ces notions ont été acquises dans le cadre de ma recherche et de l'enseignement des nouveaux cours de Sciences de données biologiques (remplaçant les cours de Biostatistique).
 
